# shredding-benchmarks

dsh/: Main.hs  Nested1.hs  Nested2.hs  dsh-shredding-benchmark.cabal  notes.org
